--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "description": "",
   "dependencies": {
     "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "graphql-scalars": "^1.23.0",
+    "gravatar": "^1.8.2",
+    "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
