--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "node build --output public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,8 +18,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-scalars": "^1.23.0",
+    "graphql-validation-complexity": "^0.4.2",
     "gravatar": "^1.8.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongodb": "^6.8.0",
