--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-validation-complexity": "^0.4.2",
     "gravatar": "^1.8.2",
     "helmet": "^7.1.0",
+    "heroku": "^8.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongodb": "^6.8.0",
