--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "18.18.2",
+    "npm": "10.8.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
